--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           cd dist
-          npm publish
+          npm publish --access=public
 
       - name: Get new version number
         run: |
