--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
   "compilerOptions": {
     "allowJs": true,
     "module": "ESNext",
-    "target": "es5",
+    "target": "ES2019",
     "moduleResolution": "node",
-    "lib": ["es2020"],
+    "lib": ["es2019"],
     "outDir": "./dist/esm",
     "declarationDir": "./dist/types",
     "strict": true,
@@ -18,7 +18,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "importHelpers": true
+    "importHelpers": false
   },
   "ts-node": {
     "transpileOnly": true,
