--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ht-sdks/events-sdk-node",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "HT Events Node SDK",
   "main": "./cjs/index.js",
   "module": "./esm/index.js",
@@ -45,9 +45,7 @@
     "release:github": "npx conventional-github-releaser -p angular",
     "package": "npm run build:cjs && npm run build:esm && npm run copy:assets"
   },
-  "keywords": [
-
-  ],
+  "keywords": [],
   "dependencies": {
     "@segment/loosely-validate-event": "2.0.0",
     "axios": "0.26.0",
