--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ht-sdks/events-sdk-node",
   "version": "1.0.3",
   "description": "HT Events Node SDK",
-  "main": "./cjs/index.js",
+  "main": "./src/index.js",
   "module": "./esm/index.js",
   "types": "./index.d.ts",
   "license": "",
